--- a/frontend_react/src/App.css
+++ b/frontend_react/src/App.css
@@ -17,8 +17,11 @@ area:hover {
   left: 0;
   z-index: 3;
   margin-top: 20px;
+  margin-left: 20%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
+  align-items: center;
+  width: 80vw;
 }
 
 .popuphud {
@@ -35,4 +38,34 @@ area:hover {
   border-radius: 20px;
   position: absolute;
   background-color: red;
+}
+
+.profile-sign-in {
+  background-color: #4285f4;
+  color: #fff;
+  font-weight: bold;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.category-btn {
+  background-color: #fff;
+  font-weight: bold;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 18px;
+  gap: 3px;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+}
+
+.category-btn:hover {
+  cursor: pointer;
+  background-color: #f3f3f3;
 }
