--- a/frontend_react/src/App.css
+++ b/frontend_react/src/App.css
@@ -15,13 +15,14 @@ area:hover {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 4;
   margin-top: 20px;
   margin-left: 20%;
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 80vw;
+  max-height: 42px;
 }
 
 .popuphud {
@@ -65,6 +66,7 @@ area:hover {
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
+.searchbar-option:hover,
 .category-btn:hover {
   cursor: pointer;
   background-color: #f3f3f3;
