--- a/frontend_react/src/App.css
+++ b/frontend_react/src/App.css
@@ -80,3 +80,13 @@ area:hover {
 .hover-background {
   background-color: #f3f3f3;
 }
+
+.side-panel {
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100%;
+  box-shadow: -10px 0px 10px 1px rgba(0, 0, 0, 0.243);
+  transition: width 0.5s ease-in-out;
+}
