--- a/frontend_react/src/App.css
+++ b/frontend_react/src/App.css
@@ -50,6 +50,7 @@ area:hover,
   padding-bottom: 8px;
   padding-left: 10px;
   padding-right: 10px;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
 .category-btn {
