Added sign in modal

--- a/frontend_react/src/App.css
+++ b/frontend_react/src/App.css
@@ -157,3 +157,11 @@ area:hover,
   border-radius: 18px;
   border: 1px solid #cfcece;
 }
+
+.acc-link {
+  color: #4285f4;
+}
+
+.acc-link:hover {
+  text-decoration: underline;
+}
