--- a/frontend_react/src/App.css
+++ b/frontend_react/src/App.css
@@ -172,7 +172,8 @@ area:hover,
 }
 
 .thumbs-up:hover,
-.thumbs-down:hover {
-  background-color: #b9b8b8;
+.thumbs-down:hover,
+.add-video-btn:hover {
+  background-color: #f3f3f3;
   cursor: pointer;
 }
