--- a/frontend_react/src/App.css
+++ b/frontend_react/src/App.css
@@ -174,6 +174,6 @@ area:hover,
 .thumbs-up:hover,
 .thumbs-down:hover,
 .add-video-btn:hover {
-  background-color: #f3f3f3;
+  background-color: #dcdada;
   cursor: pointer;
 }
