updated sign in color for better readability

--- a/frontend_react/src/App.css
+++ b/frontend_react/src/App.css
@@ -43,8 +43,8 @@ area:hover,
 }
 
 .profile-sign-in {
-  background-color: #4285f4;
-  color: #fff;
+  background-color: #21c83d;
+  color: black;
   font-weight: bold;
   padding-top: 8px;
   padding-bottom: 8px;
