--- a/frontend_react/src/App.css
+++ b/frontend_react/src/App.css
@@ -257,12 +257,6 @@ area:hover,
 }
 
 @media screen and (max-width: 625px) {
-  /* .category-btn,
-  .searchbar-cont,
-  .profile-sign-in {
-    scale: 0.5;
-  } */
-
   .searchbar-cont {
     max-width: 150px;
   }
@@ -296,6 +290,42 @@ area:hover,
   .category-btn-style {
     height: 10px;
     width: 10px;
+  }
+}
+
+@media screen and (max-width: 475px) {
+  .searchbar-cont {
+    max-width: 80px;
+  }
+
+  #default-search {
+    max-width: 80px;
+    font-size: 8px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 30px;
+  }
+
+  .search-bar-svg-cont {
+    height: 32px;
+  }
+
+  .search-bar-svg {
+    height: 8px;
+    width: 8px;
+  }
+
+  .profile-sign-in {
+    font-size: 8px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 3px;
+    padding-right: 3px;
+  }
+
+  .category-btn-style {
+    height: 8px;
+    width: 8px;
   }
 }
 
