--- a/frontend_react/src/App.css
+++ b/frontend_react/src/App.css
@@ -334,6 +334,14 @@ area:hover,
   border-bottom-right-radius: 12px;
 }
 
+.sign-in-header {
+  font-size: 18px;
+}
+
+.sign-in-form {
+  gap: 16px;
+}
+
 @media screen and (max-width: 1100px) {
   .video-modal-video {
     min-height: 200px;
@@ -564,5 +572,27 @@ area:hover,
   .side-panel-category-icon,
   .video-modal-icon {
     height: 12px;
+  }
+}
+
+@media screen and (max-height: 625px) {
+  .sign-in-header {
+    font-size: 16px;
+  }
+
+  .sign-in-form {
+    scale: 0.8;
+    gap: 12px;
+  }
+}
+
+@media screen and (max-height: 500px) {
+  .sign-in-header {
+    font-size: 12px;
+  }
+
+  .sign-in-form {
+    scale: 0.6;
+    gap: 8px;
   }
 }
