--- a/frontend_react/src/App.css
+++ b/frontend_react/src/App.css
@@ -334,7 +334,8 @@ area:hover,
   border-bottom-right-radius: 12px;
 }
 
-.sign-in-header {
+.sign-in-header,
+sign-up-header {
   font-size: 18px;
 }
 
@@ -592,7 +593,59 @@ area:hover,
   }
 
   .sign-in-form {
-    scale: 0.6;
-    gap: 8px;
+    scale: 0.7;
+    gap: 10px;
+  }
+}
+
+@media screen and (max-height: 415px) {
+  .sign-in-header {
+    font-size: 10px;
+  }
+
+  .sign-in-form {
+    scale: 0.65;
+    gap: 10px;
+  }
+}
+
+@media screen and (max-height: 375px) {
+  .sign-in-header {
+    font-size: 10px;
+  }
+
+  .sign-in-form {
+    scale: 0.54;
+    gap: 4px;
+  }
+}
+
+@media screen and (max-height: 530px) {
+  .sign-up-header {
+    font-size: 16px;
+  }
+
+  .sign-up-form {
+    scale: 0.8;
+  }
+}
+
+@media screen and (max-height: 440px) {
+  .sign-up-header {
+    font-size: 14px;
+  }
+
+  .sign-up-form {
+    scale: 0.7;
+  }
+}
+
+@media screen and (max-height: 395px) {
+  .sign-up-header {
+    font-size: 12px;
+  }
+
+  .sign-up-form {
+    scale: 0.55;
   }
 }
